# x

./: .gitattributes  .gitignore  CMakeLists.txt  code_of_conduct.md  compile  compile.sh  configure  logger.py  maintainers.md  readme.md  run.sh  security.md  test.sh  tree.c
doc/: ascii_evaluation.md  supported_characters.md  supported_tokens.md  supported_types.md
etc/: definitions.yaml  returns.yaml  tokens.yaml
example/: int.x  main.x
include/: ae.h  ast.h  bind.h  cache.h  common.h  diagnostic.h  error.h  eval.h  expr.h  expression.h  facts.h  io.h  lexer.h  parse.h  queue.h  re.h  stack.h  symbol-table.h  syntax-expression-queue.h  syntax-expression-stack.h  syntax-queue.h  syntax-stack.h  token.h  utils.h
include/ds/: binary-tree.h  linked-list-.h  linked-list.h  map.h  queue.h  stack.h
include/internal/: module.h
include/log/: log.h
libexec/: .keep
scripts/db/: _definition.py  _return.py  _token.py  definition.sql  loader.c  preprocess.c  return.sql  token.sql
src/: CMakeLists.txt  Main.java  ae.c  ast.c  atof.c  atoi.c  bind.c  cache.c  diagnostic.c  error.c  eval.c  expr.c  facts.c  io.c  lexer.c  lexer2.c  main.c  parse.c  parser.c  queue.c  re.c  ring-buffer.c  scope.c  shunning-yard-example.c  shunning-yard.c  splay-tree.c  stack.c  symbol-table.c  symbol-table2.c  syntax-queue.c  token.c  tree.c  trie.c  utils.c
src/ds/: binary-tree.c  linked-list.c  map.c  queue.c  stack.c
src/internal/: module.c
src/log/: filename.c  filename.h  hierarchy.c  hierarchy.h  log.c  message.c  message.h  position.c  position.h  prefix.c  prefix.h  std.c  std.h  style.c  style.h  timestamp.c  timestamp.h
src/preprocess/: buffer.c  database.c  insertion.h  loader.c  preprocess.c  preprocess.h  template.c  trie.c
test/: CMakeLists.txt  ae_test.c  lexer_test.c
test/ds/: queue_test.c  stack_test.c
tmp/db/: syntax.sqlite3
tmp/src/: facts.h
